# uma-cm-analyzer

./: .gitignore  PRD.md  README.md  pyproject.toml  sample_data.csv  uma_analyzer.ipynb
scripts/: push_to_colab.py
src/uma_analyzer/: analyzer.py  cli.py  colab.py  models.py  parser.py
